--- a/index.html
+++ b/index.html
@@ -1,53 +1,59 @@
 <!DOCTYPE html>
 <html lang="tr">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-            integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-        <!-- MDB -->
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/9.1.0/mdb.min.css" rel="stylesheet" />
-        <script src="https://code.iconify.design/iconify-icon/2.3.0/iconify-icon.min.js"></script>
-        <link rel="stylesheet" href="style/css/style.css">
-        <title>DocPanel</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <!-- MDB -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/9.1.0/mdb.min.css" rel="stylesheet" />
+    <script src="https://code.iconify.design/iconify-icon/2.3.0/iconify-icon.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style/css/style.css">
+    <title>DocPanel</title>
+</head>
 
-    <body>
+<body>
 
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <!-- Container wrapper -->
-            <div class="container-fluid">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg">
+        <!-- Container wrapper -->
+        <div class="container-fluid">
 
-                <!-- Collapsible wrapper -->
-                <div class="collapse navbar-collapse" style="display: flex !important;" id="navbarSupportedContent">
-                    <!-- Navbar brand -->
-                    <a class="navbar-brand mt-2 mt-lg-0" href="#">
-                        <span class="main-name">DocPanel</span>
-                    </a>
-                </div>
+            <!-- Collapsible wrapper -->
+            <div class="collapse navbar-collapse" style="display: flex !important;" id="navbarSupportedContent">
+                <!-- Navbar brand -->
+                <a class="navbar-brand mt-2 mt-lg-0" href="#"> <i class="bi-clipboard-pulse"></i>
+                    <span class="main-name">DocPanel</span>
+                </a>
+            </div>
 
-                <!-- Right elements -->
-                <div class="d-flex align-items-center gap-3 right-elements">
-                    <!-- Icon -->
+            <!-- Right elements -->
+            <div class="d-flex align-items-center gap-3 right-elements">
+                <!-- Icon -->
+                <button class="custom-btn">
                     <a class="me-3" href="#">
                         <i class="bi-calendar-plus me-1 right-icons"></i>
                         <span class="right-font">Randevu Ekle</span>
                     </a>
+                </button>
 
-                    <!-- Avatar -->
-                    <div class="dropdown">
+                <!-- Avatar -->
+                <div class="dropdown">
+                    <button class="custom-btn">
                         <a data-mdb-dropdown-init class="dropdown-toggle d-flex align-items-center"
-                            style="margin-right: 15px;" href="#" id="navbarDropdownMenuAvatar" role="button"
-                            aria-expanded="false">
+                            style="margin-right: 15px; color: black;" href="#" id="navbarDropdownMenuAvatar"
+                            role="button" aria-expanded="false">
                             <i class="bi-person-fill me-1 right-icons"></i> <span class="right-font">Ezgi Şenyaşa</span>
                         </a>
+
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuAvatar">
                             <li>
                                 <a class="dropdown-item" href="#">Profil</a>
@@ -59,53 +65,55 @@
                                 <a class="dropdown-item" href="#">Çıkış Yap</a>
                             </li>
                         </ul>
-                    </div>
+                    </button>
                 </div>
-                <!-- Right elements -->
             </div>
-            <!-- Container wrapper -->
-        </nav>
-        <!-- Navbar -->
-
-        <button id="sidebarToggle" class="sidebar-button d-md-none ">
-            <iconify-icon icon="iconamoon:menu-burger-horizontal" width="30" height="30"></iconify-icon>
-        </button>
-
-        <div class="main-container">
-            <!-- Sidebar -->
-            <div class="sidebar" id="sidebar">
-                <h4><i class="bi bi-calendar-check me-1"></i> DocPanel</h4>
-                <ul class="nav flex-column mt-2 ">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#"><i class="bi bi-person"></i> Profil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="bi bi-calendar-day"></i> Randevular</a>
-                    </li>
-                    <li class="nav-item d-none">
-                        <a class="nav-link" href="#"><i class="bi-calendar-plus"></i> Randevu Ekle</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="bi bi-graph-up"></i> İstatistikler</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#"><i class="bi bi-gear"></i> Ayarlar</a>
-                    </li>
-                    <li class="nav-item d-none">
-                        <a class="nav-link" href="#"><i class="bi-box-arrow-right"></i> Çıkış Yap</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="content-area">skmvfkmvkv</div>
+            <!-- Right elements -->
         </div>
-    </body>
+        <!-- Container wrapper -->
+    </nav>
+    <!-- Navbar -->
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/9.1.0/mdb.umd.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
-        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous"
-        referrerpolicy="no-referrer"></script>
-    <script src="style/js/main.js"></script>
-    
+    <button id="sidebarToggle" class="sidebar-button d-md-none ">
+        <iconify-icon icon="iconamoon:menu-burger-horizontal" width="30" height="30"></iconify-icon>
+    </button>
+
+    <div class="main-container">
+        <!-- Sidebar -->
+        <div class="sidebar" id="sidebar">
+            <h4><i class="bi bi-calendar-check me-1"></i> DocPanel</h4>
+            <ul class="nav flex-column mt-2 ">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#"><i class="bi bi-person"></i> Profil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="bi bi-calendar-day"></i> Randevular</a>
+                </li>
+                <li class="nav-item d-none">
+                    <a class="nav-link" href="#"><i class="bi-calendar-plus"></i> Randevu Ekle</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="bi bi-graph-up"></i> İstatistikler</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="bi bi-gear"></i> Ayarlar</a>
+                </li>
+                <li class="nav-item d-none">
+                    <a class="nav-link" href="#"><i class="bi-box-arrow-right"></i> Çıkış Yap</a>
+                </li>
+            </ul>
+        </div>
+        <div class="content-area">skmvfkmvkv</div>
+    </div>
+</body>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+    crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/9.1.0/mdb.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+    integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="style/js/main.js"></script>
+
 </html>
